[gd_scene load_steps=13 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://camera_controls.gd" type="Script" id=2]
[ext_resource path="res://sounds/undo_2.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/click_2.wav" type="AudioStream" id=4]
[ext_resource path="res://icons/undo.svg" type="Texture" id=5]
[ext_resource path="res://icons/home.svg" type="Texture" id=6]
[ext_resource path="res://sounds/collision.wav" type="AudioStream" id=7]
[ext_resource path="res://icons/reset_rotation.svg" type="Texture" id=8]
[ext_resource path="res://icons/mainfont.tres" type="DynamicFont" id=9]
[ext_resource path="res://sounds/button.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/wowow.wav" type="AudioStream" id=11]

[sub_resource type="Theme" id=2]
default_font = ExtResource( 9 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="World" type="Spatial" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="World"]
transform = Transform( -0.612373, -0.707107, 0.353553, 0.5, -2.18557e-08, 0.866026, -0.612372, 0.707107, 0.353553, 0, 8, 0 )
light_energy = 0.5

[node name="CamGimbalY" type="Spatial" parent="World"]
unique_name_in_owner = true
script = ExtResource( 2 )

[node name="CamGimbalX" type="Spatial" parent="World/CamGimbalY"]

[node name="Camera3D" type="Camera" parent="World/CamGimbalY/CamGimbalX"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8 )
fov = 75.0

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
mouse_filter = 2
theme = SubResource( 2 )

[node name="TopRight" type="HBoxContainer" parent="GUI"]
margin_right = 156.0
margin_bottom = 40.0

[node name="NewDesignButton" type="Button" parent="GUI/TopRight"]
margin_right = 43.0
margin_bottom = 40.0
text = "New"

[node name="ImportDesignButton" type="Button" parent="GUI/TopRight"]
margin_left = 47.0
margin_right = 109.0
margin_bottom = 40.0
text = "Import"

[node name="ExportDesignButton" type="Button" parent="GUI/TopRight"]
margin_left = 113.0
margin_right = 173.0
margin_bottom = 40.0
text = "Export"

[node name="NewDesignPopup" type="Popup" parent="GUI"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -254.0
margin_top = -129.0
margin_right = 254.0
margin_bottom = 129.0

[node name="Control" type="Control" parent="GUI/NewDesignPopup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="GUI/NewDesignPopup/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/NewDesignPopup/Control/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/NewDesignPopup/Control/Panel/VBoxContainer"]
margin_right = 476.0
margin_bottom = 53.0
size_flags_vertical = 3

[node name="24Button" type="Button" parent="GUI/NewDesignPopup/Control/Panel/VBoxContainer/HBoxContainer"]
margin_right = 96.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "24 (Default)"

[node name="36Button" type="Button" parent="GUI/NewDesignPopup/Control/Panel/VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 146.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "36"

[node name="48Button" type="Button" parent="GUI/NewDesignPopup/Control/Panel/VBoxContainer/HBoxContainer"]
margin_left = 150.0
margin_right = 196.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "48"

[node name="60Button" type="Button" parent="GUI/NewDesignPopup/Control/Panel/VBoxContainer/HBoxContainer"]
margin_left = 200.0
margin_right = 246.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "60"

[node name="72Button" type="Button" parent="GUI/NewDesignPopup/Control/Panel/VBoxContainer/HBoxContainer"]
margin_left = 250.0
margin_right = 297.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "72"

[node name="120Button" type="Button" parent="GUI/NewDesignPopup/Control/Panel/VBoxContainer/HBoxContainer"]
margin_left = 301.0
margin_right = 347.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "120"

[node name="240Button" type="Button" parent="GUI/NewDesignPopup/Control/Panel/VBoxContainer/HBoxContainer"]
margin_left = 351.0
margin_right = 397.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "240"

[node name="NewSnakeLengthBox" type="SpinBox" parent="GUI/NewDesignPopup/Control/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 401.0
margin_right = 475.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
min_value = 2.0
max_value = 480.0
value = 24.0
rounded = true
align = 2

[node name="Label2" type="Label" parent="GUI/NewDesignPopup/Control/Panel/VBoxContainer"]
margin_top = 74.0
margin_right = 476.0
margin_bottom = 94.0
size_flags_vertical = 6
text = "^ Choose preset size or enter custom (2-480) ^"
align = 1

[node name="Label" type="Label" parent="GUI/NewDesignPopup/Control/Panel/VBoxContainer"]
margin_top = 131.0
margin_right = 476.0
margin_bottom = 151.0
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Warning: This will replace your current design!"
align = 1

[node name="CreateNewDesignButton" type="Button" parent="GUI/NewDesignPopup/Control/Panel/VBoxContainer"]
margin_top = 172.0
margin_right = 476.0
margin_bottom = 226.0
size_flags_vertical = 3
text = "Create Blank Design"

[node name="ImportPopup" type="Popup" parent="GUI"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -227.0
margin_top = -127.0
margin_right = 227.0
margin_bottom = 127.0

[node name="Control" type="Control" parent="GUI/ImportPopup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="GUI/ImportPopup/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/ImportPopup/Control/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="ImportStatus" type="Label" parent="GUI/ImportPopup/Control/Panel/VBoxContainer"]
unique_name_in_owner = true
margin_top = 20.0
margin_right = 422.0
margin_bottom = 40.0
size_flags_vertical = 6
text = "you shouldn't see this text"
align = 1

[node name="ImportBox" type="LineEdit" parent="GUI/ImportPopup/Control/Panel/VBoxContainer"]
unique_name_in_owner = true
margin_top = 64.0
margin_right = 422.0
margin_bottom = 94.0
placeholder_text = "Formats supported: 1R2-2L3-... or 01230123..."

[node name="Label" type="Label" parent="GUI/ImportPopup/Control/Panel/VBoxContainer"]
margin_top = 118.0
margin_right = 422.0
margin_bottom = 138.0
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Warning: This will replace your current design!"
align = 1

[node name="ImportDesign" type="Button" parent="GUI/ImportPopup/Control/Panel/VBoxContainer"]
margin_top = 162.0
margin_right = 422.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Import Design"

[node name="ExportPopup" type="Popup" parent="GUI"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0

[node name="Control" type="Control" parent="GUI/ExportPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0

[node name="Panel" type="Panel" parent="GUI/ExportPopup/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/ExportPopup/Control/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/ExportPopup/Control/Panel/VBoxContainer"]
margin_right = 368.0
margin_bottom = 26.0
alignment = 1

[node name="Label" type="Label" parent="GUI/ExportPopup/Control/Panel/VBoxContainer/HBoxContainer"]
margin_left = 39.0
margin_top = 3.0
margin_right = 180.0
margin_bottom = 23.0
text = "Active design code:"
align = 1

[node name="CopyExportToClipboardButton" type="Button" parent="GUI/ExportPopup/Control/Panel/VBoxContainer/HBoxContainer"]
margin_left = 184.0
margin_right = 328.0
margin_bottom = 26.0
text = "Copy to Clipboard"

[node name="ExportBox" type="TextEdit" parent="GUI/ExportPopup/Control/Panel/VBoxContainer"]
unique_name_in_owner = true
margin_top = 30.0
margin_right = 368.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
wrap_enabled = true

[node name="Version" type="Label" parent="GUI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -247.0
margin_top = -43.0
text = "Rubik's Snake Designer
v0.2 Alpha"
align = 2

[node name="BottomLeft" type="VBoxContainer" parent="GUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -80.0
margin_right = 184.0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/BottomLeft"]
margin_right = 184.0
margin_bottom = 26.0

[node name="DefaultRotationButton" type="Button" parent="GUI/BottomLeft/HBoxContainer"]
margin_right = 90.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 8 )
icon_align = 1
expand_icon = true

[node name="Control" type="Control" parent="GUI/BottomLeft/HBoxContainer"]
margin_left = 94.0
margin_right = 184.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomLeft" type="HBoxContainer" parent="GUI/BottomLeft"]
margin_top = 30.0
margin_right = 184.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ResetCamButton" type="Button" parent="GUI/BottomLeft/BottomLeft"]
margin_right = 90.0
margin_bottom = 50.0
size_flags_horizontal = 3
icon = ExtResource( 6 )
icon_align = 1
expand_icon = true

[node name="UndoButton" type="Button" parent="GUI/BottomLeft/BottomLeft"]
unique_name_in_owner = true
margin_left = 94.0
margin_right = 184.0
margin_bottom = 50.0
size_flags_horizontal = 3
icon = ExtResource( 5 )
icon_align = 1
expand_icon = true

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="UndoAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="UndoTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="CollisionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="ButtonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="WowowAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[connection signal="pressed" from="GUI/TopRight/NewDesignButton" to="." method="_on_NewDesignButton_pressed"]
[connection signal="pressed" from="GUI/TopRight/ImportDesignButton" to="." method="_on_ImportDesignButton_pressed"]
[connection signal="pressed" from="GUI/TopRight/ExportDesignButton" to="." method="_on_ExportDesignButton_pressed"]
[connection signal="pressed" from="GUI/NewDesignPopup/Control/Panel/VBoxContainer/HBoxContainer/24Button" to="." method="_on_24Button_pressed"]
[connection signal="pressed" from="GUI/NewDesignPopup/Control/Panel/VBoxContainer/HBoxContainer/36Button" to="." method="_on_36Button_pressed"]
[connection signal="pressed" from="GUI/NewDesignPopup/Control/Panel/VBoxContainer/HBoxContainer/48Button" to="." method="_on_48Button_pressed"]
[connection signal="pressed" from="GUI/NewDesignPopup/Control/Panel/VBoxContainer/HBoxContainer/60Button" to="." method="_on_60Button_pressed"]
[connection signal="pressed" from="GUI/NewDesignPopup/Control/Panel/VBoxContainer/HBoxContainer/72Button" to="." method="_on_72Button_pressed"]
[connection signal="pressed" from="GUI/NewDesignPopup/Control/Panel/VBoxContainer/HBoxContainer/120Button" to="." method="_on_120Button_pressed"]
[connection signal="pressed" from="GUI/NewDesignPopup/Control/Panel/VBoxContainer/HBoxContainer/240Button" to="." method="_on_240Button_pressed"]
[connection signal="pressed" from="GUI/NewDesignPopup/Control/Panel/VBoxContainer/CreateNewDesignButton" to="." method="_on_CreateNewDesignButton_pressed"]
[connection signal="pressed" from="GUI/ImportPopup/Control/Panel/VBoxContainer/ImportDesign" to="." method="_on_ImportDesign_pressed"]
[connection signal="pressed" from="GUI/ExportPopup/Control/Panel/VBoxContainer/HBoxContainer/CopyExportToClipboardButton" to="." method="_on_CopyExportToClipboardButton_pressed"]
[connection signal="pressed" from="GUI/BottomLeft/HBoxContainer/DefaultRotationButton" to="." method="_on_DefaultRotationButton_pressed"]
[connection signal="pressed" from="GUI/BottomLeft/BottomLeft/ResetCamButton" to="." method="_on_ResetCamButton_pressed"]
[connection signal="pressed" from="GUI/BottomLeft/BottomLeft/UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="timeout" from="UndoTimer" to="." method="_on_UndoTimer_timeout"]
